--- a/views/index.liquid
+++ b/views/index.liquid
@@ -1,10 +1,27 @@
 {% render 'partials/head.liquid', title: 'Squad page' %}
 
-<h2>Students</h2>
-<ul>
-  {% for person in persons %}
-    <li><a href="/student/{{ person.id }}">{{ person.name }}</a></li>
-  {% endfor %}
-</ul>
+{% comment %}
+  <ul>
+    {% for person in persons %}
+      <li><a href="/student/{{ person.id }}">{{ person.name }}</a></li>
+    {% endfor %}
+  </ul>
+{% endcomment %}
+
+<header>
+  <h1>FDND Frontenders</h1>
+</header>
+
+<main>
+  <form>
+    <label>Sorteer op:</label>
+    <select>
+      <option value="">naam a-z</option>
+      <option value="">naam z-a</option>
+      <option value="">leeftijd jong-oud</option>
+      <option value="">leeftijd oud-jong</option>
+    </select>
+  </form>
+</main>
 
 {% render 'partials/foot.liquid', squads: squads %}
