--- a/views/partials/foot.liquid
+++ b/views/partials/foot.liquid
@@ -1,10 +1,10 @@
-    <footer>
+    {% comment %} <footer>
       <h2>Squads</h2>
       <ul>
         {% for squad in squads %}
           <li>Squad {{ squad.name }}</li>
         {% endfor %}
       </ul>
-    </footer>
+    </footer> {% endcomment %}
   </body>
 </html>
