--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -50,17 +50,21 @@ select {
 section {
   padding: 2rem;
   display: grid;
-  justify-items: center;
-  gap: 1rem;
-  grid-template-columns: 1fr;
+  justify-content: center;
+  gap: 2rem;
+  grid-template-columns: auto;
 
-  @media (min-width: 1024px) {
-    grid-template-columns: 1fr 1fr;
+  @media (min-width: 800px) {
+    grid-template-columns: auto auto;
   }
 
-  @media (min-width: 1200px) {
-    grid-template-columns: 1fr 1fr 1fr;
+  @media (min-width: 1100px) {
+    grid-template-columns: auto auto auto;
   }
+}
+
+a {
+  text-decoration: none;
 }
 
 article {
@@ -92,7 +96,7 @@ div {
   height: 50px;
   align-items: center;
   border-top: 3px solid var(--turquoise);
-  padding: 0 0.5rem;
+  padding: 0 0.75rem;
 }
 
 h2,
