--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -5,21 +5,21 @@
 
 html {
   --blueberry: #050542;
-  --white: #fff;
   --turquoise: #66e5bf;
+  --white: #fff;
 }
 
 body {
+  padding: 2.5rem;
   font-family: Arial, sans-serif;
   background-color: var(--blueberry);
-  padding: 2.5rem;
 }
 
 header {
-  background-color: var(--turquoise);
-  color: var(--blueberry);
-  padding: 2rem;
   width: fit-content;
+  padding: 2rem;
+  color: var(--blueberry);
+  background-color: var(--turquoise);
   border-radius: 1rem;
 }
 
@@ -34,25 +34,26 @@ form {
 }
 
 label {
-  color: var(--white);
   font-size: 1.5rem;
+  color: var(--white);
 }
 
 select {
-  background-color: var(--turquoise);
+  padding-left: .25rem;
+  font-size: 1.5rem;
   color: var(--blueberry);
+  cursor: pointer;
+  background-color: var(--turquoise);
   border: none;
   border-radius: 1rem;
-  cursor: pointer;
-  font-size: 1.5rem;
 }
 
 section {
-  padding: 2rem;
   display: grid;
+  grid-template-columns: auto;
   justify-content: center;
   gap: 2rem;
-  grid-template-columns: auto;
+  padding: 2rem;
 
   @media (min-width: 800px) {
     grid-template-columns: auto auto;
@@ -70,33 +71,39 @@ a {
 article {
   width: 300px;
   height: 350px;
-  border: 2px solid var(--turquoise);
-  border-radius: 1rem;
   overflow: hidden;
   color: var(--white);
+  border: 2px solid var(--turquoise);
+  border-radius: 1rem;
   box-shadow: -3px 3px var(--turquoise);
+  transition: transform .1s ease;
+
+  &:hover {
+    transform: scale(1.05);
+  }  
 }
 
 figure {
-  width: 300px;
-  height: 300px;
   display: flex;
   justify-content: center;
+  width: 300px;
+  height: 300px;
+  background-color: #C7C8C2;
 }
 
 img {
-  height: 100%;
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
 
 div {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   height: 50px;
-  align-items: center;
-  border-top: 3px solid var(--turquoise);
   padding: 0 0.75rem;
+  border-top: 3px solid var(--turquoise);
 }
 
 h2,
