--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -39,7 +39,7 @@ label {
 }
 
 select {
-  padding-left: .25rem;
+  padding: 0.1rem 0.5rem;
   font-size: 1.5rem;
   color: var(--blueberry);
   cursor: pointer;
@@ -76,11 +76,11 @@ article {
   border: 2px solid var(--turquoise);
   border-radius: 1rem;
   box-shadow: -3px 3px var(--turquoise);
-  transition: transform .1s ease;
+  transition: transform 0.1s ease;
 
   &:hover {
     transform: scale(1.05);
-  }  
+  }
 }
 
 figure {
@@ -88,7 +88,7 @@ figure {
   justify-content: center;
   width: 300px;
   height: 300px;
-  background-color: #C7C8C2;
+  background-color: #c7c8c2;
 }
 
 img {
