#3 Dropdown werkend gemaakt

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -8,10 +8,10 @@
   <form>
     <label>Sorteer op:</label>
     <select>
-      <option value="a-z">naam a-z</option>
-      <option value="z-a">naam z-a</option>
-      <option value="jong-oud">leeftijd jong-oud</option>
-      <option value="oud-jong">leeftijd oud-jong</option>
+      <option value="https://connect-your-tribe-squad-page-zu4l.onrender.com/?sort=name:asc">naam a-z</option>
+      <option value="https://connect-your-tribe-squad-page-zu4l.onrender.com/?sort=name:desc">naam z-a</option>
+      <option value="https://connect-your-tribe-squad-page-zu4l.onrender.com/?sort=age:asc">leeftijd jong-oud</option>
+      <option value="https://connect-your-tribe-squad-page-zu4l.onrender.com/?sort=age:desc">leeftijd oud-jong</option>
     </select>
   </form>
 
