#3 Alt attribuut toegevoegd

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -41,7 +41,7 @@
             
             {% comment %} Anders wordt er een dummy image ingeladen {% endcomment %}
             {% else %}
-              <img src="/assets/images/Default_Male_Mii.png">
+              <img src="/assets/images/Default_Male_Mii.png" alt="Dummy image">
             {% endif %}
 
           </figure>
