--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -78,6 +78,10 @@ section {
   }
 }
 
+h2 {
+  display: none;
+}
+
 article {
   width: 300px;
   height: 350px;
@@ -116,7 +120,7 @@ div {
   border-top: 3px solid var(--turquoise);
 }
 
-h2,
+h3,
 p {
   font-size: 1.5rem;
   font-weight: 400;
