--- a/views/index.liquid
+++ b/views/index.liquid
@@ -13,6 +13,7 @@
   </nav>
   
   <section>
+    <h2 class="visually-hidden">Frontenders</h2>
     {% comment %} Loopt over elk persoon {% endcomment %}
     {% for person in persons %}
 
@@ -48,7 +49,7 @@
           <div>
             {% comment %} Laat alleen de voornaam zien {% endcomment %}
             {% assign nameArray = person.name | split: " " %}
-            <h2>{{ nameArray[0] }}</h2>
+            <h3>{{ nameArray[0] }}</h3>
 
             {% comment %} Checkt of er een geboortedatum is gelinkt {% endcomment %}
             {% if person.birthdate %}
