#3 Label toegevoegd aan de linkjes en CSS opgeschoond

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -6,6 +6,7 @@
 
 <main>
   <nav>
+    <p>Sorteer op:</p>
     <a class="name-asc" href="?sort=name:asc">naam a-z</a>
     <a class="name-desc" href="?sort=name:desc">naam z-a</a>
     <a class="age-asc" href="?sort=age:asc">leeftijd jong-oud</a>
