--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -14,6 +14,10 @@ a {
   text-decoration: none;
 }
 
+.active {
+  border: 3px solid var(--white);
+}
+
 body {
   padding: 2.5rem;
   font-family: Arial, sans-serif;
@@ -44,6 +48,10 @@ nav {
   align-items: center;
   gap: 1rem;
 
+  p {
+    color: var(--white);
+  }
+
   a {
     padding: 0.5rem;
     border-radius: 1rem;
@@ -51,10 +59,6 @@ nav {
     color: var(--blueberry);
     border: 3px solid var(--turquoise);
   }
-}
-
-.active {
-  border: 3px solid var(--white);
 }
 
 section {
@@ -72,14 +76,14 @@ section {
     grid-template-columns: auto auto auto;
   }
 
+  h2 {
+    display: none;
+  }
+
   a {
     text-decoration: none;
     color: var(--white);
   }
-}
-
-h2 {
-  display: none;
 }
 
 article {
