--- a/views/index.liquid
+++ b/views/index.liquid
@@ -7,10 +7,11 @@
 <main>
   <nav>
     <p>Sorteer op:</p>
-    <a class="name-asc" href="?sort=name:asc">naam a-z</a>
-    <a class="name-desc" href="?sort=name:desc">naam z-a</a>
-    <a class="age-asc" href="?sort=age:asc">leeftijd jong-oud</a>
-    <a class="age-desc" href="?sort=age:desc">leeftijd oud-jong</a>
+    {% comment %} Geeft de link een border als erop is geklikt {% endcomment %}
+    <a class="{% if activeSort == "name:asc" %} active {% endif %}" href="?sort=name:asc">naam a-z</a>
+    <a class="{% if activeSort == "name:desc" %} active {% endif %}" href="?sort=name:desc">naam z-a</a>
+    <a class="{% if activeSort == "age:asc" %} active {% endif %}" href="?sort=age:asc">leeftijd jong-oud</a>
+    <a class="{% if activeSort == "age:desc" %} active {% endif %}" href="?sort=age:desc">leeftijd oud-jong</a>
   </nav>
   
   <section>
