--- a/views/index.liquid
+++ b/views/index.liquid
@@ -8,10 +8,10 @@
   <nav>
     <p>Sorteer op:</p>
     {% comment %} Geeft de link een border als erop is geklikt {% endcomment %}
-    <a class="{% if activeSort == "name:asc" %} active {% endif %}" href="?sort=name:asc">naam a-z</a>
-    <a class="{% if activeSort == "name:desc" %} active {% endif %}" href="?sort=name:desc">naam z-a</a>
-    <a class="{% if activeSort == "age:asc" %} active {% endif %}" href="?sort=age:asc">leeftijd jong-oud</a>
-    <a class="{% if activeSort == "age:desc" %} active {% endif %}" href="?sort=age:desc">leeftijd oud-jong</a>
+    <a class="{% if activeSort == "name:asc" %} active {% endif %}" href="?sort=name:asc">A-Z</a>
+    <a class="{% if activeSort == "name:desc" %} active {% endif %}" href="?sort=name:desc">Z-A</a>
+    <a class="{% if activeSort == "age:asc" %} active {% endif %}" href="?sort=age:asc">Jong-Oud</a>
+    <a class="{% if activeSort == "age:desc" %} active {% endif %}" href="?sort=age:desc">Oud-Jong</a>
   </nav>
   
   <section>
